--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -15,7 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "recharts": "^2.8.0",
     "typescript": ">=2.7",
     "web-vitals": "^3.4.0"
